<resources>
    <string name="app_name">Lockdown HELP</string>
    <string name="app_tagline">LockdownApp</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="send_otp">Send Otp</string>
    <string name="otp_title">Enter the OTP sent to your mobile number</string>
    <string name="change">Change</string>
    <string name="resend_otp">Resend OTP in 30 seconds</string>
    <string name="verify">Verify</string>
    <string name="request_requirements">Request your requirements</string>
    <string name="food_essentials">Food &amp; Essentials</string>
    <string name="health_medicine">Health &amp; Medicine</string>
    <string name="free_food_shelter">Free Food &amp; Shelter</string>
    <string name="public_services">Public Services</string>
    <string name="select_vegetables">Select Vegetables</string>
    <string name="submit_request">Submit Request</string>
    <string name="active">Active</string>
    <string name="country_code">+ 91</string>
    <string name="mobile_hint">9599695958</string>
    <string name="resend">Resend</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="enter_name">Enter Name</string>
    <string name="name_hint">Name</string>

</resources>
