<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:elevation="10dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <TextView
            android:id="@+id/tTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/otp_title"
            android:textSize="16sp"></TextView>
        <TextView
            android:id="@+id/txtMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_hint"
            android:layout_below="@id/tTitle"
            android:textSize="16sp"
            android:textColor="#474747"
            android:layout_marginTop="20dp"></TextView>

        <TextView
            android:id="@+id/txtChangeMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textColor="@color/colorLightBlue"
            android:textSize="12sp"
            android:layout_toRightOf="@id/txtMobileNumber"
            android:layout_below="@id/tTitle"
            android:layout_marginTop="13dp"
            android:padding="10dp"></TextView>


        <RelativeLayout
            android:id="@+id/linOtp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMobileNumber"
            android:background="@drawable/mobile_bg"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/textOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="OTP"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="6"
                android:padding="10dp"
                android:layout_toLeftOf="@id/txtResendOtp"
                android:background="@null"></EditText>
            <TextView
                android:id="@+id/txtResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"></TextView>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                android:layout_width="30dp"
                android:visibility="gone"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_centerVertical="true"
                style="@style/Widget.AppCompat.ProgressBar"></androidx.core.widget.ContentLoadingProgressBar>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/colorRed"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relMain"
        android:layout_marginTop="10dp"></TextView>

    <Button
        android:id="@+id/btnVerifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:background="@drawable/verify_button_bg"
        android:textColor="@color/colorWhite"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtError"
        android:layout_marginTop="30dp"></Button>

</RelativeLayout>