<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.lockdownhelp.app.Login">

    <RelativeLayout
        android:id="@+id/relSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:sliderAnimationDuration="1000"
        app:sliderAutoCycleDirection="right"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#7CC034"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="2"
        app:sliderStartAutoCycle="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/relSlider"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">


        <TextView
            android:id="@+id/tEM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:textStyle="bold"></TextView>
        <RelativeLayout
            android:id="@+id/relMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tEM"
            android:layout_marginTop="20dp"
            android:background="@drawable/mobile_bg">
            <TextView
                android:id="@+id/txt_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_code"
                android:textColor="@color/colorDisabled"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:padding="10dp"></TextView>
            <View
                android:id="@+id/view1"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/txt_country_code"
                android:background="@color/colorDisabled"></View>
            <EditText
                android:id="@+id/textMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/view1"
                android:hint="(999) 999-9999"
                android:maxLength="14"
                android:digits="0123456789()- "
                android:inputType="phone"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"></EditText>
        </RelativeLayout>

        <Button
            android:id="@+id/btnSendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/send_otp_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="14sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/relMobile"
            android:layout_marginTop="40dp"
            android:text="@string/send_otp"></Button>

    </RelativeLayout>

</RelativeLayout>